--- a/tabele.html
+++ b/tabele.html
@@ -8,7 +8,7 @@
 <body>
     <table>
         <tr>
-            <th>Imięe</th>
+            <th>Imię</th>
             <th>Nazwisko</th>
             <th>Wiek</th>
         </tr>
